--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -34,7 +34,7 @@ jobs:
       - name: update source
         run: nix flake update --commit-lock-file
       - name: test-ci
-        run: nix build .#Pragmasevka.nerd
+        run: nix build .#pragma-sevka-sans.nerd
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
