--- a/src/private-build-plans.toml
+++ b/src/private-build-plans.toml
@@ -1,57 +1,182 @@
-[buildPlans.Pragmasevka]
-family = "Pragmasevka"
+[buildPlans.pragma-sevka-mono]
+family = "Pragma Sevka Mono"
 spacing = "term"
 serifs = "sans"
 noCvSs = true
 exportGlyphNames = true
+hintParams = ["-a", "qqq"]
 
-  hintParams = ["-a", "qqq"]
-  [buildPlans.Pragmasevka.variants]
-  inherits = "ss08"
-  [buildPlans.Pragmasevka.metricOverride]
-  # leading = 1080
-  leading = 1200
-  # xHeight = 600
-    [buildPlans.Pragmasevka.variants.design]
-    three = "flat-top-serifless"
-    zero = "slashed"
-    capital-j = "serifed"
-    f = "flat-hook-serifed"
-    k = "diagonal-tailed-cursive-serifless"
-    l = "serifed"
-    caret = "low"
-    paren = "normal"
-    brace = "curly-flat-boundary"
-    ampersand = "closed"
-    percent = "rings-continuous-slash"
-  [buildPlans.Pragmasevka.ligations]
-  inherits = "dlig"
+[buildPlans.pragma-sevka-mono.variants]
+inherits = "ss08"
 
-[buildPlans.Pragmasevka.widths.normal]
-shape = 550
+[buildPlans.pragma-sevka-mono.metricOverride]
+leading = 1200 # 如果你希望更小，也许可以设置为 1080,
+# xHeight = 550
+
+[buildPlans.pragma-sevka-mono.variants.design]
+three = "flat-top-serifless"
+zero = "slashed"
+capital-j = "serifed"
+f = "flat-hook-serifed"
+k = "diagonal-tailed-cursive-serifless"
+l = "serifed"
+caret = "low"
+paren = "normal"
+brace = "curly-flat-boundary"
+ampersand = "closed"
+percent = "rings-continuous-slash"
+
+[buildPlans.pragma-sevka-mono.ligations]
+inherits = "dlig"
+
+[buildPlans.pragma-sevka-mono.weights.regular]
+shape = 400
+menu  = 400
+css   = 400
+
+[buildPlans.pragma-sevka-mono.weights.bold]
+shape = 700
+menu  = 700
+css   = 700
+
+[buildPlans.pragma-sevka-mono.slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
+
+[buildPlans.pragma-sevka-mono.slopes.italic]
+angle = 9.4
+shape = "italic"
+menu  = "italic"
+css   = "italic"
+
+[buildPlans.pragma-sevka-mono.widths.normal]
+shape = 525
 menu  = 5
 css   = "normal"
 
-[buildPlans.Pragmasevka.weights.regular]
-shape = 425
-menu = 400
-css = 400
 
-[buildPlans.Pragmasevka.weights.semibold]
-shape = 600
-menu = 600
-css = 600
+# sans
 
-[buildPlans.Pragmasevka.weights.bold]
-shape = 800
-menu = 700
-css = 700
+[buildPlans.pragma-sevka-sans]
+family = "Pragma Sevka Sans"
+spacing = "normal"
+serifs = "sans"
+noCvSs = true
+exportGlyphNames = false
+noLigation = true
+hintParams = ["-a", "qqq"]
 
-[buildPlans.Pragmasevka.weights.black]
-shape = 900
-menu = 900
-css = 900
+[buildPlans.pragma-sevka-sans.variants]
+inherits = "ss08"
 
-[buildPlans.Pragmasevka.slopes]
-upright = "default.Upright"
-italic = "default.Italic"
+[buildPlans.pragma-sevka-sans.metricOverride]
+leading = 1200 # 如果你希望更小，也许可以设置为 1080,
+# xHeight = 550
+
+[buildPlans.pragma-sevka-sans.variants.design]
+three = "flat-top-serifless"
+zero = "slashed"
+capital-i = "short-serifed"
+capital-j = "serifless"
+f = "serifless"
+g = "double-storey-open"
+i = "zshaped"
+k = "diagonal-tailed-cursive-serifless"
+l = "serifed"
+r = "top-serifed"
+caret = "low"
+paren = "normal"
+brace = "straight"
+ampersand = "closed"
+percent = "rings-continuous-slash"
+
+[buildPlans.pragma-sevka-sans.weights.regular]
+shape = 400
+menu  = 400
+css   = 400
+
+[buildPlans.pragma-sevka-sans.weights.bold]
+shape = 700
+menu  = 700
+css   = 700
+
+[buildPlans.pragma-sevka-sans.slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
+
+[buildPlans.pragma-sevka-sans.slopes.italic]
+angle = 9.4
+shape = "italic"
+menu  = "italic"
+css   = "italic"
+
+[buildPlans.pragma-sevka-sans.widths.normal]
+shape = 525
+menu  = 5
+css   = "normal"
+
+# serif
+[buildPlans.pragma-sevka-serif]
+family = "Pragma Sevka Serif"
+spacing = "normal"
+serifs = "slab"
+noCvSs = true
+exportGlyphNames = false
+noLigation = true
+hintParams = ["-a", "qqq"]
+
+[buildPlans.pragma-sevka-serif.variants]
+inherits = "ss08"
+
+[buildPlans.pragma-sevka-serif.metricOverride]
+leading = 1200 # 如果你希望更小，也许可以设置为 1080,
+# xHeight = 550
+
+[buildPlans.pragma-sevka-serif.variants.design]
+three = "flat-top-serifed"
+zero = "slashed"
+capital-i = "serifed"
+capital-j = "serifed-both-sides"
+f = "serifless"
+g = "double-storey-open"
+i = "zshaped"
+k = "diagonal-tailed-cursive-top-left-serifed"
+l = "serifed"
+r = "top-serifed"
+caret = "low"
+paren = "normal"
+brace = "straight"
+ampersand = "closed"
+percent = "rings-continuous-slash"
+
+
+[buildPlans.pragma-sevka-serif.weights.regular]
+shape = 400
+menu  = 400
+css   = 400
+
+[buildPlans.pragma-sevka-serif.weights.bold]
+shape = 700
+menu  = 700
+css   = 700
+
+[buildPlans.pragma-sevka-serif.slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
+
+[buildPlans.pragma-sevka-serif.slopes.italic]
+angle = 9.4
+shape = "italic"
+menu  = "italic"
+css   = "italic"
+
+[buildPlans.pragma-sevka-serif.widths.normal]
+shape = 525
+menu  = 5
+css   = "normal"
