feat: add buildTextureFeature = true

--- a/src/mono.toml
+++ b/src/mono.toml
@@ -5,6 +5,7 @@ serifs = "sans"
 noCvSs = true
 exportGlyphNames = true
 hintParams = ["-a", "qqq"]
+buildTextureFeature = true
 
 [buildPlans.pragma-sevka-mono.variants]
 inherits = "ss08"
