--- a/src/private-build-plans.toml
+++ b/src/private-build-plans.toml
@@ -5,6 +5,7 @@ serifs = "sans"
 noCvSs = true
 exportGlyphNames = true
 hintParams = ["-a", "qqq"]
+buildTextureFeature = true
 
 [buildPlans.pragma-sevka-mono.variants]
 inherits = "ss08"
@@ -67,6 +68,7 @@ noCvSs = true
 exportGlyphNames = false
 noLigation = true
 hintParams = ["-a", "qqq"]
+buildTextureFeature = true
 
 [buildPlans.pragma-sevka-sans.variants]
 inherits = "ss08"
@@ -128,6 +130,7 @@ noCvSs = true
 exportGlyphNames = false
 noLigation = true
 hintParams = ["-a", "qqq"]
+buildTextureFeature = true
 
 [buildPlans.pragma-sevka-serif.variants]
 inherits = "ss08"
