--- a/nvfetcher.toml
+++ b/nvfetcher.toml
@@ -1,3 +1,7 @@
 [iosevka]
 fetch.github = "be5invis/Iosevka"
 src.github = "be5invis/Iosevka"
+
+[nerd-font-patcher]
+src.github = "ryanoasis/nerd-font"
+fetch.url = "https://github.com/ryanoasis/nerd-fonts/releases/download/$ver/FontPatcher.zip"
