--- a/src/mono.toml
+++ b/src/mono.toml
@@ -40,6 +40,12 @@ shape = 700
 menu  = 700
 css   = 700
 
+[buildPlans.pragma-sevka-mono.slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
+
 [buildPlans.pragma-sevka-mono.slopes.italic]
 angle = 9.4
 shape = "italic"
