--- a/src/private-build-plans.toml
+++ b/src/private-build-plans.toml
@@ -40,6 +40,12 @@ shape = 700
 menu  = 700
 css   = 700
 
+[buildPlans.pragma-sevka-mono.slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
+
 [buildPlans.pragma-sevka-mono.slopes.italic]
 angle = 9.4
 shape = "italic"
@@ -98,6 +104,11 @@ shape = 700
 menu  = 700
 css   = 700
 
+[buildPlans.pragma-sevka-sans.slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
 
 [buildPlans.pragma-sevka-sans.slopes.italic]
 angle = 9.4
@@ -155,6 +166,12 @@ css   = 400
 shape = 700
 menu  = 700
 css   = 700
+
+[buildPlans.pragma-sevka-serif.slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
 
 [buildPlans.pragma-sevka-serif.slopes.italic]
 angle = 9.4
