--- a/src/sans.toml
+++ b/src/sans.toml
@@ -42,6 +42,12 @@ shape = 700
 menu  = 700
 css   = 700
 
+[buildPlans.pragma-sevka-sans.slopes.upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
+
 [buildPlans.pragma-sevka-sans.slopes.italic]
 angle = 9.4
 shape = "italic"
